--- a/src/app/modules/project/project/project.component.html
+++ b/src/app/modules/project/project/project.component.html
@@ -1,1 +1,16 @@
-<p>project works!</p>
+<table>
+<thead>
+    <tr>
+    <th>ID</th>
+    <th>Nombre</th>
+    <th>Descripción</th>
+    </tr>
+</thead>
+<tbody>
+    <tr *ngFor="let item of proyects">
+    <td>{{ item.id }}</td>
+    <td>{{ item.name }}</td>
+    <td>{{ item.description }}</td>
+    </tr>
+</tbody>
+</table>
