--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="container">
+    <div>
+        <span>Hola Soy {{user.name}}</span>
+        <span></span>
+    </div>
+    <div>
+        slides
+    </div>
+</div>
