--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -2,5 +2,7 @@
     <button mat-button routerLink="/">Inicio</button>
     <button mat-button routerLink="/project">Projects</button>
     <button mat-button routerLink="/about">About me</button>
+    <mat-divider></mat-divider>
+    <button mat-button routerLink="/contact">Contact</button>
 </mat-toolbar>
   
