imagenes add lazyloading

--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -4,6 +4,8 @@
         <span></span>
     </div>
     <div>
-        slides
+        <app-slideshow
+            class="slide-home"
+            ></app-slideshow>
     </div>
 </div>
