--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -6,3 +6,13 @@
     justify-items: stretch;
     align-items: stretch;
  }
+
+ .slide-home {
+   height: 10em;
+   width: 10em;
+ }
+ .slide-home img {
+   max-width: 100%;
+   max-height: 100%;
+   object-fit: contain;
+ }
