--- a/src/app/shared/components/slideshow/slideshow.component.html
+++ b/src/app/shared/components/slideshow/slideshow.component.html
@@ -1,1 +1,5 @@
-<p>slideshow works!</p>
+<div #imageContainer>
+    <img [src]="images[currentImageIndex]" 
+     class="image-contain" alt="Image" />
+</div>
+  
